<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <Spinner
            android:id="@+id/spCategory"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:prompt="@string/categories"
            android:entries="@array/category_array" />

        <CheckBox
            android:id="@+id/cbBought"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/bought"/>
        
    </LinearLayout>
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/price"
            android:layout_weight="1.8"/>
    </LinearLayout>

    <EditText
        android:id="@+id/etDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description" />





</LinearLayout>